; ModuleID = '/home/carl/AnghaBench/dsvpn/src/extr_vpn.c_load_key_file.c'
source_filename = "/home/carl/AnghaBench/dsvpn/src/extr_vpn.c_load_key_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@O_RDONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"VPN Key Exchange\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @load_key_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_key_file(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [32 x i8], align 16
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32, i32* @O_RDONLY, align 4
  %10 = call i32 @open(i8* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %32

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  %15 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %16 = call i32 @safe_read(i32 %14, i8* %15, i32 32, i32 -1)
  %17 = sext i32 %16 to i64
  %18 = icmp ne i64 %17, 32
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @close(i32 %20)
  store i32 -1, i32* %3, align 4
  br label %32

22:                                               ; preds = %13
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %27 = call i32 @uc_state_init(i32 %25, i8* %26, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %28 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %29 = call i32 @uc_memzero(i8* %28, i32 32)
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @close(i32 %30)
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %22, %19, %12
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @safe_read(i32, i8*, i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @uc_state_init(i32, i8*, i8*) #1

declare dso_local i32 @uc_memzero(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
